--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <div class="nav-item dropdown">
-                    <a href="service.html" class="nav-item nav-link">Our Services</a>
+<!--                     <a href="service.html" class="nav-item nav-link">Our Services</a> -->
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Services</a>
                     <div class="dropdown-menu bg-light border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Features</a>
+                        <a href="service.html" class="dropdown-item">Our Services</a>
                         <a href="quote.html" class="dropdown-item">Free Quote</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
