--- a/about.html
+++ b/about.html
@@ -39,27 +39,30 @@
     <!-- Spinner End -->
 
 
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark text-white-50 py-2 px-0 d-none d-lg-block">
         <div class="row gx-0 align-items-center">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+012 345 6789</small>
+                    <small><a href="tel:+919138058070">+91-9138058070</a></small>
+
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="far fa-envelope-open me-2"></small>
-                    <small>info@example.com</small>
+                    <small><a href="mailto:appliancecare514@gmail.com">appliancecare514@gmail.com</a></small>
+
                 </div>
             </div>
-            <div class="col-lg-5 px-5 text-end">
+            <!-- <div class="col-lg-5 px-5 text-end">
                 <ol class="breadcrumb justify-content-end mb-0">
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Terms</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Privacy</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Support</a></li>
                 </ol>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Topbar End -->
@@ -68,17 +71,33 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">AirCon</h1>
+            <h1 class="m-0"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">
+                    <span style="color: black;">Appliance</span><span style="color: #FF800F;">Care</span>
+            </h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto bg-light pe-4 py-3 py-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About Us</a>
-                <a href="service.html" class="nav-item nav-link">Our Services</a>
-                <div class="nav-item dropdown">
+            <div class="navbar-nav ms-auto bg-white pe-4 py-3 py-lg-0">
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <div class="nav-item dropdown ">
+<!--                     <a href="service.html" class="nav-item nav-link">Our Services</a> -->
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Services</a>
+                    <div class="dropdown-menu bg-light border-0 m-0">
+                        <a href="service.html" class="dropdown-item">AC Installation Services</a>
+                        <a href="service.html" class="dropdown-item">AC Uninstallation Services</a>
+                        <a href="service.html" class="dropdown-item">AC Repair Services</a>
+                        <a href="service.html" class="dropdown-item">AC Gas Filling</a>
+                        <a href="service.html" class="dropdown-item">AC Parts Repair / Replacement</a>
+                        <a href="service.html" class="dropdown-item">AC Deep Servicing</a>                        
+<!--                         <a href="quote.html" class="dropdown-item">Free Quote</a>
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
+                    </div>
+                </div>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light border-0 m-0">
                         <a href="feature.html" class="dropdown-item">Features</a>
@@ -87,15 +106,17 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
-                </div>
+                </div> -->
+                <a href="about.html" class="nav-item nav-link">Gallery</a>
+                <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none">
+            <!-- <div class="h-100 d-lg-inline-flex align-items-center d-none">
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
-            </div>
+            </div> -->
         </div>
     </nav>
     <!-- Navbar End -->
@@ -286,43 +307,68 @@
     <!-- Team End -->
 
 
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">AirCon</h1>
-                    <span>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</span>
+                <div class="col-md-12">
+                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">
+                    <span style="color: white;">Appliance</span><span style="color: #FF800F;">Care</span>
+                </h1>
+                    <span>Your one-stop destination for complete AC installation, repair, and maintenance services. We provide expert solutions for split AC, window AC, inverter AC, gas filling, dismantling, annual servicing, and all types of AC repairs. Our trained technicians ensure fast diagnosis, genuine spare parts, affordable pricing, and quick doorstep service to keep your home cool and comfortable throughout the year.</span>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Clita erat ipsum et lorem et sit, sed stet lorem sit clita.</p>
                     <div class="position-relative">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                </div> -->
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p>
+                        <i class="fa fa-map-marker-alt me-3"></i>
+                        <a href="https://www.google.com/maps/search/Gurgaon,+Haryana,+India+122006" 
+                           target="_blank" 
+                           style="text-decoration:none; color:inherit;">
+                            Gurgaon, Haryana, India - 122006
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-phone-alt me-3"></i>
+                        <a href="tel:+919138058070" 
+                           style="text-decoration:none; color:inherit;">
+                            +91-9138058070
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-envelope me-3"></i>
+                        <a href="mailto:appliancecare514@gmail.com" 
+                           style="text-decoration:none; color:inherit;">
+                            appliancecare514@gmail.com
+                        </a>
+                    </p>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation</a>
-                    <a class="btn btn-link" href="">Cooling Services</a>
-                    <a class="btn btn-link" href="">Heating Services</a>
-                    <a class="btn btn-link" href="">Annual Inspections</a>
+                    <a class="btn btn-link" href="">AC Installation / Uninstallation</a>
+                    <a class="btn btn-link" href="">AC Repair Services</a>
+                    <a class="btn btn-link" href="">AC Gas Filling / Top-Up</a>
+                    <a class="btn btn-link" href="">AC Parts Repair / Replacement</a>
+                    <a class="btn btn-link" href="">AC Servicing / Maintenance</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Follow Us</h5>
                     <div class="d-flex">
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
@@ -330,14 +376,14 @@
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container-fluid copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="index.html">ApplianceCare</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
