--- a/testimonial.html
+++ b/testimonial.html
@@ -39,27 +39,29 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
+        <!-- Topbar Start -->
     <div class="container-fluid bg-dark text-white-50 py-2 px-0 d-none d-lg-block">
         <div class="row gx-0 align-items-center">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+012 345 6789</small>
+                    <small><a href="tel:+919138058070">+91-9138058070</a></small>
+
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="far fa-envelope-open me-2"></small>
-                    <small>info@example.com</small>
+                    <small><a href="mailto:appliancecare514@gmail.com">appliancecare514@gmail.com</a></small>
+
                 </div>
             </div>
-            <div class="col-lg-5 px-5 text-end">
+            <!-- <div class="col-lg-5 px-5 text-end">
                 <ol class="breadcrumb justify-content-end mb-0">
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Terms</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Privacy</a></li>
                     <li class="breadcrumb-item"><a class="text-white-50 small" href="#">Support</a></li>
                 </ol>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Topbar End -->
@@ -68,34 +70,52 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">AirCon</h1>
+            <h1 class="m-0"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">
+                    <span style="color: black;">Appliance</span><span style="color: #FF800F;">Care</span>
+            </h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto bg-light pe-4 py-3 py-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="service.html" class="nav-item nav-link">Our Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+            <div class="navbar-nav ms-auto bg-white pe-4 py-3 py-lg-0">
+                <a href="index.html" class="nav-item nav-link ">Home</a>
+                <div class="nav-item dropdown ">
+<!--                     <a href="service.html" class="nav-item nav-link">Our Services</a> -->
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Services</a>
+                    <div class="dropdown-menu bg-light border-0 m-0">
+                        <a href="service.html" class="dropdown-item">AC Installation Services</a>
+                        <a href="service.html" class="dropdown-item">AC Uninstallation Services</a>
+                        <a href="service.html" class="dropdown-item">AC Repair Services</a>
+                        <a href="service.html" class="dropdown-item">AC Gas Filling</a>
+                        <a href="service.html" class="dropdown-item">AC Parts Repair / Replacement</a>
+                        <a href="service.html" class="dropdown-item">AC Deep Servicing</a>                        
+<!--                         <a href="quote.html" class="dropdown-item">Free Quote</a>
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
+                    </div>
+                </div>
+                <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light border-0 m-0">
                         <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="quote.html" class="dropdown-item">Free Quote</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
-                </div>
+                </div> -->
+                <a href="about.html" class="nav-item nav-link">Gallery</a>
+                <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none">
+            <!-- <div class="h-100 d-lg-inline-flex align-items-center d-none">
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
-            </div>
+            </div> -->
         </div>
     </nav>
     <!-- Navbar End -->
