äbout, contact page done

--- a/about.html
+++ b/about.html
@@ -128,8 +128,8 @@
             <h1 class="display-4 text-white animated slideInDown mb-4">About Us</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active" aria-current="page">About</li>
                 </ol>
             </nav>
@@ -144,7 +144,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <h1 class="display-6 mb-5">Welcome To Best Cooling & Heating Service Center</h1>
+                        <h1 class="display-6 mb-5">Welcome to Our Cooling & Home Appliance Service Center</h1>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">Your one-stop destination for complete AC installation, repair, and maintenance services. We provide expert solutions for split AC, window AC, inverter AC, gas filling, dismantling, annual servicing, and all types of AC repairs. Our trained technicians ensure fast diagnosis, genuine spare parts, affordable pricing, and quick doorstep service to keep your home cool and comfortable throughout the year.</p>
                         <div class="border-top mt-4 pt-4">
                             <div class="row">
                                 <div class="col-sm-6">
@@ -167,15 +167,19 @@
                                         <div class="btn-lg-square bg-primary rounded-circle me-3">
                                             <i class="fa fa-phone-alt text-white"></i>
                                         </div>
-                                        <h5 class="mb-0">+012 345 6789</h5>
+                                        <h5 class="mb-0">
+                                            <a href="tel:+919138058070" style="text-decoration: none; color: inherit;">+91-9138058070</a>
+                                        </h5>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="d-flex align-items-center">
-                                        <div class="btn-lg-square bg-primary rounded-circle me-3">
+                                        <div class="btn-lg-square bg-primary rounded-circle me-3 flex-shrink-0">
                                             <i class="fa fa-envelope text-white"></i>
                                         </div>
-                                        <h5 class="mb-0">info@example.com</h5>
+                                        <h5 class="mb-0">
+                                            <a href="mailto:appliancecare514@gmail.com" style="text-decoration: none; color: inherit;">appliancecare514@gmail.com</a>
+                                        </h5>
                                     </div>
                                 </div>
                             </div>
@@ -208,27 +212,43 @@
     <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Happy Clients</span>
+                <div class="col-12 col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="text-md-start text-center d-flex flex-column align-items-center">
+                        <h1 class="display-4 text-white" data-toggle="counter-up">4500</h1>
+                        <span class="text-primary">Happy Customers</span>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Projects Succeed</span>
+
+                <div class="col-12 col-md-4 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="text-center d-flex flex-column align-items-center">
+                        <h1 class="display-4 text-white" data-toggle="counter-up">4200</h1>
+                        <span class="text-primary">Services Completed</span>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Awards Achieved</span>
+
+                <div class="col-12 col-md-4 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="text-md-end text-center d-flex flex-column align-items-center">
+                        <h1 class="display-4 text-white" data-toggle="counter-up">5</h1>
+                        <span class="text-primary">Team Members</span>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
+
+                <!-- <div class="col-12 col-md-4 wow fadeIn text-md-start" data-wow-delay="0.1s">
+                    <h1 class="display-4 text-white" data-toggle="counter-up">4500</h1>
+                    <span class="text-primary ">Happy Customers</span>
+                </div>
+                <div class="col-12 col-md-4 wow fadeIn text-center" data-wow-delay="0.3s">
+                    <h1 class="display-4 text-white" data-toggle="counter-up">4200</h1>
+                    <span class="text-primary">Services Completed</span>
+                </div>
+                <div class="col-12 col-md-4 wow fadeIn text-end" data-wow-delay="0.5s">
+                    <h1 class="display-4 text-white" data-toggle="counter-up">5</h1>
                     <span class="text-primary">Team Members</span>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <!-- Facts End -->
-
 
     <!-- Team Start -->
     <div class="container-xxl py-5">
