--- a/contact.html
+++ b/contact.html
@@ -127,8 +127,8 @@
             <h1 class="display-4 text-white animated slideInDown mb-4">Contact Us</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active" aria-current="page">Contact</li>
                 </ol>
             </nav>
@@ -142,9 +142,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-6 mb-5">If You Have Any Query, Please Contact Us</h1>
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                    <form>
+                    <h1 class="display-6 mb-5">If You Have Any Query, Please Connect With Our AC Repair & Installation Experts</h1>
+                    <p class="mb-4">Contact us today for professional AC repair, installation, maintenance, and gas filling services. We provide quick responses, trained technicians, and affordable doorstep support. <!-- <a href="https://htmlcodex.com/contact-form">Download Now</a> -->.</p>
+                    <!-- <form>
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
@@ -174,14 +174,41 @@
                                 <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
+                    <div class="d-flex flex-wrap gap-3 mt-4">
+
+                                <!-- Write a Mail -->
+                                <a href="mailto:appliancecare514@gmail.com" 
+                                    class="btn btn-primary py-3 px-4 animated slideInDown">
+                                    <img src="img/icon/mail_icon.png" alt="Mail Icon" style="width:20px; height:20px;">
+                                    Write a Mail
+                                </a>
+
+                                <!-- Call Now -->
+                                <a href="tel:+919138058070" 
+                                   class="btn btn-primary py-3 px-4 animated slideInDown">
+                                    <img src="img/icon/phone_icon.png" alt="Call Icon" style="width:20px; height:20px;">
+                                    Call Now
+                                </a>
+
+                                <!-- WhatsApp -->
+                                <a href="https://wa.me/919138058070?text=Hi" 
+                                   class="btn btn-primary py-3 px-4 animated slideInDown"
+                                   target="_blank">
+                                    <img src="img/icon/whatsapp_icon.png" alt="WhatsApp Icon" style="width:20px; height:20px;">
+                                    WhatsApp
+                                </a>
+                        </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
                     <div class="position-relative overflow-hidden h-100">
-                        <iframe class="position-relative w-100 h-100"
+                        <a href="https://wa.me/919138058070?text=Hi" >
+                            <img src="img/ac_map.jpg" alt="WhatsApp Icon" style="width:500px; height:400px;">
+                        </a>
+                        <!-- <iframe class="position-relative w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
                         frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                        tabindex="0"></iframe> -->
                     </div>
                 </div>
             </div>
@@ -190,43 +217,68 @@
     <!-- Contact End -->
 
 
+    
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">AirCon</h1>
-                    <span>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</span>
+                <div class="col-md-12">
+                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">
+                    <span style="color: white;">Appliance</span><span style="color: #FF800F;">Care</span>
+                </h1>
+                    <span>Your one-stop destination for complete AC installation, repair, and maintenance services. We provide expert solutions for split AC, window AC, inverter AC, gas filling, dismantling, annual servicing, and all types of AC repairs. Our trained technicians ensure fast diagnosis, genuine spare parts, affordable pricing, and quick doorstep service to keep your home cool and comfortable throughout the year.</span>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Clita erat ipsum et lorem et sit, sed stet lorem sit clita.</p>
                     <div class="position-relative">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                </div> -->
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p>
+                        <i class="fa fa-map-marker-alt me-3"></i>
+                        <a href="https://www.google.com/maps/search/Gurgaon,+Haryana,+India+122006" 
+                           target="_blank" 
+                           style="text-decoration:none; color:inherit;">
+                            Gurgaon, Haryana, India - 122006
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-phone-alt me-3"></i>
+                        <a href="tel:+919138058070" 
+                           style="text-decoration:none; color:inherit;">
+                            +91-9138058070
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-envelope me-3"></i>
+                        <a href="mailto:appliancecare514@gmail.com" 
+                           style="text-decoration:none; color:inherit;">
+                            appliancecare514@gmail.com
+                        </a>
+                    </p>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation</a>
-                    <a class="btn btn-link" href="">Cooling Services</a>
-                    <a class="btn btn-link" href="">Heating Services</a>
-                    <a class="btn btn-link" href="">Annual Inspections</a>
+                    <a class="btn btn-link" href="service.html">AC Installation / Uninstallation</a>
+                    <a class="btn btn-link" href="service.html">AC Repair Services</a>
+                    <a class="btn btn-link" href="service.html">AC Gas Filling / Top-Up</a>
+                    <a class="btn btn-link" href="service.html">AC Parts Repair / Replacement</a>
+                    <a class="btn btn-link" href="service.html">AC Servicing / Maintenance</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Follow Us</h5>
                     <div class="d-flex">
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
@@ -234,14 +286,14 @@
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container-fluid copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="index.html">ApplianceCare</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
