--- a/service.html
+++ b/service.html
@@ -105,7 +105,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
-                <a href="about.html" class="nav-item nav-link">Gallery</a>
+                <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
