Set same footer on every page

--- a/team.html
+++ b/team.html
@@ -277,43 +277,67 @@
     <!-- Team End -->
         
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">AirCon</h1>
-                    <span>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</span>
+                <div class="col-md-12">
+                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-primary.png" alt="">
+                    <span style="color: white;">Appliance</span><span style="color: #FF800F;">Care</span>
+                </h1>
+                    <span>Your one-stop destination for complete AC installation, repair, and maintenance services. We provide expert solutions for split AC, window AC, inverter AC, gas filling, dismantling, annual servicing, and all types of AC repairs. Our trained technicians ensure fast diagnosis, genuine spare parts, affordable pricing, and quick doorstep service to keep your home cool and comfortable throughout the year.</span>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Clita erat ipsum et lorem et sit, sed stet lorem sit clita.</p>
                     <div class="position-relative">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                </div> -->
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p>
+                        <i class="fa fa-map-marker-alt me-3"></i>
+                        <a href="https://www.google.com/maps/search/Gurgaon,+Haryana,+India+122006" 
+                           target="_blank" 
+                           style="text-decoration:none; color:inherit;">
+                            Gurgaon, Haryana, India - 122006
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-phone-alt me-3"></i>
+                        <a href="tel:+919138058070" 
+                           style="text-decoration:none; color:inherit;">
+                            +91-9138058070
+                        </a>
+                    </p>
+
+                    <p>
+                        <i class="fa fa-envelope me-3"></i>
+                        <a href="mailto:appliancecare514@gmail.com" 
+                           style="text-decoration:none; color:inherit;">
+                            appliancecare514@gmail.com
+                        </a>
+                    </p>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation</a>
-                    <a class="btn btn-link" href="">Cooling Services</a>
-                    <a class="btn btn-link" href="">Heating Services</a>
-                    <a class="btn btn-link" href="">Annual Inspections</a>
+                    <a class="btn btn-link" href="service.html">AC Installation / Uninstallation</a>
+                    <a class="btn btn-link" href="service.html">AC Repair Services</a>
+                    <a class="btn btn-link" href="service.html">AC Gas Filling / Top-Up</a>
+                    <a class="btn btn-link" href="service.html">AC Parts Repair / Replacement</a>
+                    <a class="btn btn-link" href="service.html">AC Servicing / Maintenance</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Follow Us</h5>
                     <div class="d-flex">
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
@@ -321,14 +345,14 @@
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container-fluid copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="index.html">ApplianceCare</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -339,6 +363,7 @@
         </div>
     </div>
     <!-- Footer End -->
+
 
 
     <!-- Back to Top -->
