--- a/about.html
+++ b/about.html
@@ -328,7 +328,7 @@
 
 
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
@@ -375,18 +375,18 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation / Uninstallation</a>
-                    <a class="btn btn-link" href="">AC Repair Services</a>
-                    <a class="btn btn-link" href="">AC Gas Filling / Top-Up</a>
-                    <a class="btn btn-link" href="">AC Parts Repair / Replacement</a>
-                    <a class="btn btn-link" href="">AC Servicing / Maintenance</a>
+                    <a class="btn btn-link" href="service.html">AC Installation / Uninstallation</a>
+                    <a class="btn btn-link" href="service.html">AC Repair Services</a>
+                    <a class="btn btn-link" href="service.html">AC Gas Filling / Top-Up</a>
+                    <a class="btn btn-link" href="service.html">AC Parts Repair / Replacement</a>
+                    <a class="btn btn-link" href="service.html">AC Servicing / Maintenance</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Follow Us</h5>
@@ -414,6 +414,7 @@
         </div>
     </div>
     <!-- Footer End -->
+
 
 
     <!-- Back to Top -->
