--- a/index.html
+++ b/index.html
@@ -724,9 +724,9 @@ No waiting, no worries—support is always one call away.</span>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6">
